[package]
name = "akdTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akd = "0.11.0"
akd_core = { version = "0.11.0", features = ["whatsapp_v1"] }
hex = "0.4.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
crypto = "0.5.0"
sha3 = "0.10.8"
rand_core = { version = "0.6", features = ["std"] }
cbc = "0.1.2"
aes = "0.8"
bytes = "1.5.0"
rand = "0.8.5"
log = "0.4.20"
lazy_static = "1.4.0"
mysql = "24.0.0"